# pmis

./: Cargo.toml  README.md  commands.md  default.nix  flake.nix
src/: cli.rs  lib.rs  main.rs  session.rs
src/operations/: delete.rs  download.rs  list.rs  login.rs  logout.rs  mod.rs  register.rs  upload.rs  user.rs
src/schema/: mod.rs  paste.rs
